--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ csv = "1.1.6"
 serde = "1.0.136"
 nalgebra = {version ="0.30.1", features = ["default", "serde-serialize"]}
 num = "0.4.0"
-#simba = "0.7.1"
-#thiserror = "1.0.30"
+simba = "0.7.1"
+thiserror = "1.0.30"
 #itertools = "0.8.1"
 #rayon = "1.5.2"
