--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ nalgebra = {version ="0.30.1", features = ["default", "serde-serialize"]}
 num = "0.4.0"
 simba = "0.7.1"
 thiserror = "1.0.30"
-GSL = "4.0"
+#GSL = "4.0"
 plotters = "0.3"
 fast-float = "0.2.0"
 #itertools = "0.8.1"
