--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,4 +18,5 @@ thiserror = "1.0.30"
 plotters = "0.3"
 fast-float = "0.2.0"
 #itertools = "0.8.1"
-#rayon = "1.5.2"
+rayon = "1.5.2"
+indicatif = {version = "0.17.0", features = ["rayon"]}
