--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,9 @@ license-file = "LICENSE"
 [dependencies]
 csv = "1.1.6"
 serde = "1.0.136"
-nalgebra = { version = "0.31.2", features = ["default", "serde-serialize"] }
+nalgebra = { version = "0.32.1", features = ["default", "serde-serialize"] }
 num = "0.4.0"
+num-traits = "0.2.15"
 simba = "0.7.1"
 thiserror = "1.0.30"
 plotters = "0.3"
