trying new grad_phi approach

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,5 @@ plotters = "0.3"
 fast-float = "0.2.0"
 rayon = "1.5.2"
 indicatif = {version = "0.17.0", features = ["rayon"]}
+#colorous = "1.0.9"
+#palette = "0.6.1"
