--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ num = "0.4.0"
 num-traits = "0.2.15"
 simba = "0.7.1"
 thiserror = "1.0.30"
-plotters = "0.3"
+#plotters = "0.3"
 fast-float = "0.2.0"
 rayon = "1.5.2"
 indicatif = {version = "0.17.0", features = ["rayon"]}
